--- a/data-science/requirements.txt
+++ b/data-science/requirements.txt
@@ -1,14 +1,10 @@
-sphinx==2.4.*
+sphinx==3.2.*
 sphinx_rtd_theme
-sphinxcontrib-bibtex
 
-# sphinxcontrib-book
-# sphinxjp.themes.revealjs
-
-matplotlib
-numpy
-scikit-learn
-scipy
-jupyter
-pandas
-plotly
+# matplotlib
+# numpy
+# scikit-learn
+# scipy
+# jupyter
+# pandas
+# plotly
