--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,6 +1,6 @@
-sphinx==2.4.*
+sphinx==3.2.*
 sphinx_rtd_theme
-sphinxcontrib-bibtex
 
-# sphinxcontrib-book
-# sphinxjp.themes.revealjs
+# django
+# django-debug-toolbar
+# pillow
