--- a/network/requirements.txt
+++ b/network/requirements.txt
@@ -1,11 +1,5 @@
-sphinx==2.4.*
+sphinx==3.2.*
 sphinx_rtd_theme
 sphinxcontrib-bibtex
 
-# sphinxcontrib-book
-# sphinxjp.themes.revealjs
-
-django
-django-debug-toolbar
-pillow
-requests
+# requests
