Book: CI/CD #time 2m

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 sphinx==3.3.*
 sphinx_rtd_theme
 sphinxcontrib-bibtex
+recommonmark
 
-# recommonmark
 # sphinxcontrib-book
 # sphinxjp.themes.revealjs
 
